<resources>
    <string name="app_name">No Thanks for Android</string>
    <string name="redirect_activity_is_missing_message">Redirect activity is missing!</string>
    <string name="about_text">
No Thanks! for Android version 1.0
\n
Copyrights (C) 2023 Thorsten Gimmler, Svetlin Georgiev
\n
\n
programming and art by Svetlin Georgiev ( svetlin2002@gmail.com )
\n
Sofia, Bulgaria
    </string>
    <string name="help_text">
\tNo Thanks! is a card game created by Thorsten Gimmler, ideal for groups of three to seven players. Originally known as Geschenkt!, it was first published by Amigo Spiele in 2004 and later translated into English by Z-Man Games.
\n
\n
\tCard Range: The game features playing cards numbered from 3 to 35. Before the game begins, nine cards are randomly selected and removed from the deck, which is then thoroughly shuffled.
\n
\n
\tChips Distribution: The number of chips each player receives at the start of the game depends on the player count. With 3 to 5 players, each player begins with 11 chips. For 6 players, each starts with 9 chips, and in games with 7 players, each player receives 7 chips. Players also have the option to conceal their chips from others if they wish.
\n
\n
\tGame Initiation: The first player initiates the game by revealing the top card from the shuffled deck. They have a choice: they can either take the card, accumulating points according to its value, or opt to pass on it by paying a chip, which is then placed on the card. The player must declare \"No thanks!\" when passing. Subsequently, play continues in a clockwise direction, with each player making the same decision when their turn arrives.
\n
\n
\tCollecting Cards and Chips: The gameplay continues until a player decides to take the card along with all the chips accumulated on it, if any. The player who accepts the card then flips over the next card and repeats the process, deciding whether to take it or pass it. This pattern persists until all the cards in the deck have been taken.
\n
\n
\tScoring: In the final scoring phase of the game, players calculate their points based on the values of the cards they have collected. Notably, cards in a consecutive run are treated as a single card with the lowest value. For example, a run of cards with numbers 30, 29, 28, and 27 would be considered a 27-point set. Each chip held by a player incurs a negative point, resulting in a strategic consideration to minimize the number of chips you accumulate.
\n
\n
\tVictory: The player or players with the lowest overall point total win the game. Mastering the art of minimizing card values and judicious chip management are key strategies for success in \"No Thanks!\"</string>
    <string name="single_player_game_label">Single Player Game</string>
    <string name="join_multiplayer_game_label">Join Multiplayer Game</string>
    <string name="host_multiplayer_game_label">Host Multiplayer Game</string>
    <string name="exit_game_label">Exit Game</string>
    <string name="new_game_menu">New Game</string>
    <string name="help_menu">Help</string>
    <string name="about_menu">About</string>
    <string name="save_game_menu">Save</string>
    <string name="load_game_menu">Load</string>
    <string name="player_report_menu">Player Report</string>
    <string name="end_report_menu">End Report</string>
    <string name="end_turn_menu">End Turn</string>
    <string name="exit_menu">Exit</string>
    <string name="take_card_caption">Take Card</string>
    <string name="no_thanks_caption">No Thanks!</string>
    <string name="players_list_done_caption">Players List Done</string>
    <string name="game_was_not_started_message">Game was not started!</string>
    <string name="the_game_finished_message">The game finished!</string>
    <string name="start_new_game_text">Start new game!</string>
    <string name="the_game_not_finished_message">The game not finished!</string>
    <string name="the_game_is_not_in_progress_message">The game is not in progress!</string>
</resources>