<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/new_game"
        android:title="@string/new_game_menu" />
    <item
        android:id="@+id/save_game"
        android:title="@string/save_game_menu" />
    <item
        android:id="@+id/load_game"
        android:title="@string/load_game_menu" />
    <item
        android:id="@+id/end_turn"
        android:title="@string/end_turn_menu" />
    <item
        android:id="@+id/player_report"
        android:title="@string/player_report_menu" />
    <item
        android:id="@+id/end_report"
        android:title="@string/end_report_menu" />
    <item
        android:id="@+id/help"
        android:title="@string/help_menu" />
    <item
        android:id="@+id/about"
        android:title="@string/about_menu" />
    <item
        android:id="@+id/exitt"
        android:title="@string/exit_menu" />
</menu>